# co-design-framework

./: .gitignore  README.md  app_component.py  confidence_plot.ipynb  evaluation_framework.sh  lqr.ipynb  main.py  out.csv  pendulum_simulator.py  queueing_gcl.py  requirements.tex  run.sh  run_delta_sweep.sh  run_dual.sh  run_switch_time_sweep.sh  run_worst_case_sweep.sh  sample.py
benchmark/: delta_sweep_20260406_151400.csv  delta_sweep_20260406_151537.csv  delta_sweep_20260406_152620.csv  delta_sweep_20260406_152756.csv  delta_sweep_20260406_160007.csv  delta_sweep_20260406_160130.csv  delta_sweep_20260409_102056.csv  delta_sweep_20260409_102241.csv  delta_sweep_20260409_104049.csv  delta_sweep_20260409_104241.csv  delta_sweep_20260409_113414.csv  delta_sweep_20260409_113613.csv  delta_sweep_20260409_114250.csv  delta_sweep_20260409_114433.csv  delta_sweep_20260511_033541.csv  delta_sweep_20260511_033559.csv  delta_sweep_20260511_033925.csv  delta_sweep_20260511_034138.csv  delta_sweep_20260511_035234.csv  delta_sweep_20260511_035454.csv  delta_sweep_20260511_035717.csv  delta_sweep_20260511_040141.csv  delta_sweep_20260511_042051.csv  delta_sweep_20260511_042339.csv  delta_sweep_20260511_050954.csv  (+18 more)
inverted-pendulum/src/: .gitignore  CMakeLists.txt  Task-6.ipynb  event.cc  event.h  inverted_pendulum.cc  inverted_pendulum.h  lqr.cc  lqr.h  merge_to_csv.cc  simulate-handoff.cc  simulate-lqr-dual.cc  simulate-lqr.cc  visualization.cc  visualization_dual.cc
inverted-pendulum/src/.ipynb_checkpoints/: Task-6-checkpoint.ipynb
inverted-pendulum/src/data/: merged.csv
(+33 files in other folders)
